--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.0",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "@mdx-js/loader": "^1.6.21",
+    "emotion-theming": "^11.0.0",
+    "framer-motion": "^2.9.4",
     "next": "10.0.1",
+    "next-mdx-enhanced": "^5.0.0",
+    "prism-react-renderer": "^1.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
-  }
+  },
+  "devDependencies": {}
 }
