next image, somewhat working

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/client": "^2.0.9",
+    "@sanity/image-url": "^0.140.19",
     "emotion-theming": "^11.0.0",
     "framer-motion": "^2.9.4",
     "next": "10.0.1",
