nav links, react icons

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^2.9.4",
     "next": "10.0.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.1.0"
   },
   "devDependencies": {}
 }
