syntax highlighting, sanity connected

--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.0",
-    "@chakra-ui/react": "^1.0.0",
-    "@emotion/react": "^11.1.1",
-    "@emotion/styled": "^11.0.0",
+    "@chakra-ui/icons": "^1.0.8",
+    "@chakra-ui/react": "^1.4.2",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/client": "^2.0.9",
-    "@sanity/image-url": "^0.140.19",
+    "@sanity/client": "^2.7.1",
+    "@sanity/image-url": "^0.140.22",
     "emotion-theming": "^11.0.0",
-    "framer-motion": "^2.9.4",
-    "next": "10.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.1.0"
+    "framer-motion": "^4.1.0",
+    "next": "^10.1.2",
+    "prism-react-renderer": "^1.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {}
 }
