--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prism-react-renderer": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-twitter-embed": "^3.0.3"
   },
   "devDependencies": {}
 }
