--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.7.1",
     "@sanity/image-url": "^0.140.22",
+    "@supabase/supabase-js": "^1.11.2",
     "emotion-theming": "^11.0.0",
     "framer-motion": "^4.1.0",
     "next": "^10.1.2",
@@ -23,7 +24,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-twitter-embed": "^3.0.3"
+    "react-twitter-embed": "^3.0.3",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "next-sitemap": "^1.6.25"
