--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.7.1",
     "@sanity/image-url": "^0.140.22",
+    "@sendgrid/mail": "^7.4.2",
     "@supabase/supabase-js": "^1.11.2",
     "emotion-theming": "^11.0.0",
     "framer-motion": "^4.1.0",
