cleaned up imports, projects ordered by updated desc

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,8 +3,7 @@
       "baseUrl": ".",
       "paths": {
         "@/components/*": ["components/*"],
-        "@/lib/*": ["lib/*"],
-        "@/data/*": ["data/*"]
+        "@/lib/*": ["lib/*"]
       }
     }
   }
