--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-twitter-embed": "^4.0.4",
     "swr": "^1.2.2"
